// Auto-Generated by si-registry!
// Do not edit by hand!
// This means you! It won't last! You'll be sad!

syntax = "proto3";

package si.cea;
import "google/protobuf/wrappers.proto";
// No Services
message ComponentSiProperties {
  google.protobuf.StringValue integration_id = 1;
  google.protobuf.StringValue integration_service_id = 2;
  google.protobuf.Int32Value version = 3;
}
enum EntitySiPropertiesEntityState {
  ENTITY_SI_PROPERTIES_ENTITY_STATE_UNKNOWN = 0;
  ENTITY_SI_PROPERTIES_ENTITY_STATE_ERROR = 1;
  ENTITY_SI_PROPERTIES_ENTITY_STATE_OK = 2;
  ENTITY_SI_PROPERTIES_ENTITY_STATE_TRANSITION = 3;
}
message EntitySiProperties {
  EntitySiPropertiesEntityState entity_state = 1;
  google.protobuf.StringValue integration_id = 2;
  google.protobuf.StringValue integration_service_id = 3;
  google.protobuf.StringValue component_id = 4;
  google.protobuf.StringValue workspace_id = 5;
  google.protobuf.StringValue change_set_id = 6;
  google.protobuf.StringValue organization_id = 7;
  google.protobuf.StringValue billing_account_id = 8;
  google.protobuf.Int32Value version = 9;
}
message EntityEventSiProperties {
  google.protobuf.StringValue integration_id = 1;
  google.protobuf.StringValue integration_service_id = 2;
  google.protobuf.StringValue entity_id = 3;
  google.protobuf.StringValue component_id = 4;
  google.protobuf.StringValue workspace_id = 5;
  google.protobuf.StringValue organization_id = 6;
  google.protobuf.StringValue billing_account_id = 7;
}
